Make tests pass