@@ -2,6 +2,7 @@ package com.palmergames.bukkit.towny.object;
 
 import be.seeseemelk.mockbukkit.MockBukkit;
 import com.palmergames.bukkit.towny.TownySettings;
+import com.palmergames.bukkit.util.BukkitTools;
 import com.palmergames.bukkit.util.EntityLists;
 import com.palmergames.bukkit.util.ItemLists;
 import org.bukkit.Material;
@@ -12,6 +13,7 @@ import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -35,22 +37,11 @@ public class RegistryListTests {
 	}
 	
 	@Test
-	void testMissingListAddDoesntAddEverything() {
-		ItemLists itemList = ItemLists.newBuilder().add("materialthatdefinitelyexists").build();
-		assertEquals(0, itemList.tagged().size());
-	}
-	
-	@Test
-	void testNothingAddedToTheBuilderGivesEverything() {
-		assertTrue(ItemLists.newBuilder().build().tagged().size() > 100);
-	}
-	
-	@Test
 	void testCustomRegistryListBuilderClassNames() {
 		EntityLists built = TownySettings.constructRegistryList(EntityLists.newBuilder(), Tag.REGISTRY_ENTITY_TYPES, Arrays.asList("c:Animals"), EntityType::getEntityClass);
-		assertEquals(built.tagged(), EntityLists.ANIMALS.tagged());
+		assertEquals(EntityLists.ANIMALS.tagged(), built.tagged());
 
-		Set<Material> expected = new HashSet<>(Arrays.asList(WEEPING_VINES, NETHER_WART, FROSTED_ICE, SWEET_BERRY_BUSH, CACTUS, COCOA, CAVE_VINES, PITCHER_CROP, BEETROOTS, SUGAR_CANE, CHORUS_FLOWER, FIRE, BAMBOO, POTATOES, MELON_STEM, CARROTS, TORCHFLOWER_CROP, WHEAT, MANGROVE_PROPAGULE, KELP, TWISTING_VINES, PUMPKIN_STEM));
+		Set<Material> expected = new HashSet<>(Set.of(WEEPING_VINES, NETHER_WART, FROSTED_ICE, SWEET_BERRY_BUSH, CACTUS, COCOA, CAVE_VINES, PITCHER_CROP, BEETROOTS, SUGAR_CANE, CHORUS_FLOWER, FIRE, BAMBOO, POTATOES, MELON_STEM, CARROTS, TORCHFLOWER_CROP, WHEAT, MANGROVE_PROPAGULE, KELP, TWISTING_VINES, PUMPKIN_STEM));
 		List<String> input = new ArrayList<>(Arrays.asList("c:org.bukkit.block.data.Ageable"));
 		
 		ItemLists list = TownySettings.constructRegistryList(ItemLists.newBuilder(), Tag.REGISTRY_BLOCKS, input, type -> type.data);
@@ -60,5 +51,16 @@ public class RegistryListTests {
 		input.add("-weeping_vines");
 		list = TownySettings.constructRegistryList(ItemLists.newBuilder(), Tag.REGISTRY_BLOCKS, input, type -> type.data);
 		assertEquals(expected, list.tagged());
+	}
+	
+	@Test
+	void testMinimalEntityCollection() {
+		List<String> input = List.of("wolf", "monsters");
+		List<EntityType> inputAsEntityType = new ArrayList<>(TownySettings.constructRegistryList(EntityLists.newBuilder(), Tag.REGISTRY_ENTITY_TYPES, Arrays.asList("+wolf", "c:Monster"), EntityType::getEntityClass).tagged);
+		
+		Collection<String> minimal = BukkitTools.toMinimalEntityCollection(inputAsEntityType);
+		
+		assertEquals(input.size(), minimal.size());
+		assertTrue(input.containsAll(minimal));
 	}
 }
